[package]
name = "testplan"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.9.0"
futures = "0.3.1"
if-addrs = "0.7.0"
ipnetwork = { version = "0.18.0", default-features = false, features = ["serde"] }
soketto = "0.7.1"
async-std = { version = "1.10", features = [ "attributes", "tokio1" ] }
serde = { version = "1", features = [ "derive" ] }
serde_json = "1"
thiserror = "1"
testground = { git = "https://github.com/laurentsenta/sdk-rust", branch = "feat/init-invoker", version = "0.2.0" }
# libp2p = "0.44.0" # TODO: Figure out how to make this easy to override.
libp2p = { version = "0.44.0", default-features = false, features = ["tcp-async-io", "dns-async-std", "websocket", "noise", "mplex", "yamux", "ping"] }
# a

[patch.crates-io]
libp2p = { git = 'https://github.com/libp2p/rust-libp2p', rev = '3cfbf89a3aaad37bfa0731d7f27d0ae9e3e2b2b0' }
